Changed the updating algo a little bit. I think it was the 
YELLOW case that was causing issues.