@@ -1,33 +1,33 @@
 121,184,81
 243,194,55
 164,174,196
-1531,355
-1699,363
-1864,358
-2006,357
-2178,357
-1544,518
-1700,519
-1864,518
-2026,521
-2171,521
-1535,680
-1692,674
-1856,676
-2018,681
-2171,684
-1550,840
-1701,832
-1861,833
-2018,835
-2181,835
-1542,994
-1697,995
-1872,993
-2036,996
-2178,993
-1545,1156
-1700,1150
-1859,1149
-2005,1149
-2167,1148
+1535,360
+1695,355
+1861,359
+2010,358
+2161,358
+1536,514
+1692,511
+1853,514
+2005,516
+2164,511
+1532,674
+1695,673
+1849,670
+2014,677
+2167,668
+1535,828
+1698,827
+1852,827
+2012,831
+2158,827
+1535,990
+1695,985
+1849,983
+2011,990
+2166,986
+1537,1146
+1694,1148
+1852,1145
+2005,1143
+2163,1143
