@@ -1,5 +1,4 @@
 from bot import Bot
 
-
 protoBot = Bot()
 protoBot.run()
